# ScreenOps

./: .gitignore  AI_INSTRUCTIONS.md  LICENSE  README.md  __init__.py  cli.py  facade.py  main.py  pyproject.toml  requirements.txt.bak
auto_clicker/: __init__.py  clicker.py  hotkey.py
automation/: __init__.py  context.py  rules.py  trigger.py  watcher.py
codegen/: generator.py
config/: auto_login.yaml  settings.yaml
core/: __init__.py  events.py  keyboard.py  launcher.py  mouse.py  screen.py
examples/: wechat_auto_reply.py
image/: __init__.py  clicker.py  matcher.py
ocr/: __init__.py  clicker.py  recognizer.py
recorder/: __init__.py  player.py  recorder.py
tests/: health_check.py  open_wechat.py  run_tests.sh  test_intelligent_input.py  test_logic.py
workflow/: README.md  auto_retry_agent.py
workflows/examples/: auto_login.yaml
